--- a/app/src/main/res/layout/fragment_venue_profile.xml
+++ b/app/src/main/res/layout/fragment_venue_profile.xml
@@ -205,34 +205,34 @@
                     android:layout_width="35dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:background="@drawable/ic_baseline_star_outline_24" />
+                    android:src="@drawable/ic_baseline_star_outline_24" />
 
                 <ImageView
                     android:id="@+id/overall_rating_s2"
                     android:layout_width="35dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:background="@drawable/ic_baseline_star_outline_24" />
+                    android:src="@drawable/ic_baseline_star_outline_24" />
 
                 <ImageView
                     android:id="@+id/overall_rating_s3"
                     android:layout_width="35dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:background="@drawable/ic_baseline_star_outline_24" />
+                    android:src="@drawable/ic_baseline_star_outline_24" />
 
                 <ImageView
                     android:id="@+id/overall_rating_s4"
                     android:layout_width="35dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:background="@drawable/ic_baseline_star_outline_24"/>
+                    android:src="@drawable/ic_baseline_star_outline_24"/>
                 <ImageView
                     android:id="@+id/overall_rating_s5"
                     android:layout_width="35dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:background="@drawable/ic_baseline_star_outline_24" />
+                    android:src="@drawable/ic_baseline_star_outline_24" />
             </LinearLayout>
 
             <TextView
@@ -270,30 +270,30 @@
                     android:id="@+id/setting_s1"
                     android:layout_width="30dp"
                     android:layout_height="match_parent"
-                    android:background="@drawable/ic_baseline_star_outline_24" />
+                    android:src="@drawable/ic_baseline_star_outline_24" />
 
                 <ImageView
                     android:id="@+id/setting_s2"
                     android:layout_width="30dp"
                     android:layout_height="match_parent"
-                    android:background="@drawable/ic_baseline_star_outline_24" />
+                    android:src="@drawable/ic_baseline_star_outline_24" />
 
                 <ImageView
                     android:id="@+id/setting_s3"
                     android:layout_width="30dp"
                     android:layout_height="match_parent"
-                    android:background="@drawable/ic_baseline_star_outline_24" />
+                    android:src="@drawable/ic_baseline_star_outline_24" />
 
                 <ImageView
                     android:id="@+id/setting_s4"
                     android:layout_width="30dp"
                     android:layout_height="match_parent"
-                    android:background="@drawable/ic_baseline_star_outline_24" />
+                    android:src="@drawable/ic_baseline_star_outline_24" />
                 <ImageView
                     android:id="@+id/setting_s5"
                     android:layout_width="30dp"
                     android:layout_height="match_parent"
-                    android:background="@drawable/ic_baseline_star_outline_24" />
+                    android:src="@drawable/ic_baseline_star_outline_24" />
             </LinearLayout>
 
             <TextView
@@ -330,30 +330,30 @@
                     android:id="@+id/atmosphere_s1"
                     android:layout_width="30dp"
                     android:layout_height="match_parent"
-                    android:background="@drawable/ic_baseline_star_outline_24" />
+                    android:src="@drawable/ic_baseline_star_outline_24" />
 
                 <ImageView
                     android:id="@+id/atmosphere_s2"
                     android:layout_width="30dp"
                     android:layout_height="match_parent"
-                    android:background="@drawable/ic_baseline_star_outline_24" />
+                    android:src="@drawable/ic_baseline_star_outline_24" />
 
                 <ImageView
                     android:id="@+id/atmosphere_s3"
                     android:layout_width="30dp"
                     android:layout_height="match_parent"
-                    android:background="@drawable/ic_baseline_star_outline_24" />
+                    android:src="@drawable/ic_baseline_star_outline_24" />
 
                 <ImageView
                     android:id="@+id/atmosphere_s4"
                     android:layout_width="30dp"
                     android:layout_height="match_parent"
-                    android:background="@drawable/ic_baseline_star_outline_24" />
+                    android:src="@drawable/ic_baseline_star_outline_24" />
                 <ImageView
                     android:id="@+id/atmosphere_s5"
                     android:layout_width="30dp"
                     android:layout_height="match_parent"
-                    android:background="@drawable/ic_baseline_star_outline_24" />
+                    android:src="@drawable/ic_baseline_star_outline_24" />
             </LinearLayout>
 
             <TextView
@@ -390,30 +390,30 @@
                     android:id="@+id/reliability_s1"
                     android:layout_width="30dp"
                     android:layout_height="match_parent"
-                    android:background="@drawable/ic_baseline_star_outline_24" />
+                    android:src="@drawable/ic_baseline_star_outline_24" />
 
                 <ImageView
                     android:id="@+id/reliability_s2"
                     android:layout_width="30dp"
                     android:layout_height="match_parent"
-                    android:background="@drawable/ic_baseline_star_outline_24" />
+                    android:src="@drawable/ic_baseline_star_outline_24" />
 
                 <ImageView
                     android:id="@+id/reliability_s3"
                     android:layout_width="30dp"
                     android:layout_height="match_parent"
-                    android:background="@drawable/ic_baseline_star_outline_24" />
+                    android:src="@drawable/ic_baseline_star_outline_24" />
 
                 <ImageView
                     android:id="@+id/reliability_s4"
                     android:layout_width="30dp"
                     android:layout_height="match_parent"
-                    android:background="@drawable/ic_baseline_star_outline_24" />
+                    android:src="@drawable/ic_baseline_star_outline_24" />
                 <ImageView
                     android:id="@+id/reliability_s5"
                     android:layout_width="30dp"
                     android:layout_height="match_parent"
-                    android:background="@drawable/ic_baseline_star_outline_24" />
+                    android:src="@drawable/ic_baseline_star_outline_24" />
             </LinearLayout>
 
             <TextView
@@ -450,30 +450,30 @@
                     android:id="@+id/communication_s1"
                     android:layout_width="30dp"
                     android:layout_height="match_parent"
-                    android:background="@drawable/ic_baseline_star_outline_24" />
+                    android:src="@drawable/ic_baseline_star_outline_24" />
 
                 <ImageView
                     android:id="@+id/communication_s2"
                     android:layout_width="30dp"
                     android:layout_height="match_parent"
-                    android:background="@drawable/ic_baseline_star_outline_24" />
+                    android:src="@drawable/ic_baseline_star_outline_24" />
 
                 <ImageView
                     android:id="@+id/communication_s3"
                     android:layout_width="30dp"
                     android:layout_height="match_parent"
-                    android:background="@drawable/ic_baseline_star_outline_24" />
+                    android:src="@drawable/ic_baseline_star_outline_24" />
 
                 <ImageView
                     android:id="@+id/communication_s4"
                     android:layout_width="30dp"
                     android:layout_height="match_parent"
-                    android:background="@drawable/ic_baseline_star_outline_24" />
+                    android:src="@drawable/ic_baseline_star_outline_24" />
                 <ImageView
                     android:id="@+id/communication_s5"
                     android:layout_width="30dp"
                     android:layout_height="match_parent"
-                    android:background="@drawable/ic_baseline_star_outline_24" />
+                    android:src="@drawable/ic_baseline_star_outline_24" />
             </LinearLayout>
 
             <TextView
