--- a/app/src/main/res/layout/review_of_artist_fragment.xml
+++ b/app/src/main/res/layout/review_of_artist_fragment.xml
@@ -18,15 +18,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <!--<androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/primary_pink"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintEnd_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>-->
-
         <EditText
             android:id="@+id/review_title"
             android:layout_width="match_parent"
@@ -35,7 +26,7 @@
             android:layout_marginTop="80dp"
             android:layout_marginEnd="20dp"
             android:layout_marginBottom="20dp"
-            android:hint="Title"
+            android:hint="@string/title"
             android:textSize="20dp"
             android:text="@={viewModel.reviewTitle}"
             app:layout_constraintBottom_toTopOf="@+id/review_description"
@@ -76,197 +67,87 @@
             android:id="@+id/stage_presence_rating_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Stage Presence Rating"
+            android:text="@string/stage_presence_rating"
             app:layout_constraintTop_toBottomOf="@id/divider"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="20dp"
             android:layout_marginTop="10dp"/>
 
-        <LinearLayout
+        <RatingBar
             android:id="@+id/presence_review_stars"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@id/stage_presence_rating_text"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="10dp"
-            android:orientation="horizontal"
             android:layout_marginStart="18dp"
-            android:layout_marginEnd="20dp">
-
-            <ImageView
-                android:id="@+id/stage_presence_s1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/ic_baseline_star_outline_24" />
-            <ImageView
-                android:id="@+id/stage_presence_s2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/ic_baseline_star_outline_24" />
-            <ImageView
-                android:id="@+id/stage_presence_s3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/ic_baseline_star_outline_24" />
-            <ImageView
-                android:id="@+id/stage_presence_s4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/ic_baseline_star_outline_24" />
-            <ImageView
-                android:id="@+id/stage_presence_s5"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/ic_baseline_star_outline_24" />
-            </LinearLayout>
+            android:theme="@style/reviewRatings"
+            android:stepSize=".5"
+            android:numStars="5" />
 
         <TextView
             android:id="@+id/vocals_rating_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Vocals Rating"
+            android:text="@string/vocals_rating"
             app:layout_constraintTop_toBottomOf="@id/presence_review_stars"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="20dp"
             android:layout_marginTop="20dp"/>
 
-        <LinearLayout
+        <RatingBar
             android:id="@+id/vocals_review_stars"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@id/vocals_rating_text"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="10dp"
-            android:orientation="horizontal"
+            android:theme="@style/reviewRatings"
             android:layout_marginStart="18dp"
-            android:layout_marginEnd="20dp">
-
-            <ImageView
-                android:id="@+id/vocals_s1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/ic_baseline_star_outline_24" />
-            <ImageView
-                android:id="@+id/vocals_s2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/ic_baseline_star_outline_24" />
-            <ImageView
-                android:id="@+id/vocals_s3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/ic_baseline_star_outline_24" />
-            <ImageView
-                android:id="@+id/vocals_s4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/ic_baseline_star_outline_24" />
-            <ImageView
-                android:id="@+id/vocals_s5"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/ic_baseline_star_outline_24" />
-        </LinearLayout>
+            android:stepSize=".5"
+            android:numStars="5" />
 
         <TextView
             android:id="@+id/reliability_rating_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Reliability Rating"
+            android:text="@string/reliability_rating"
             app:layout_constraintTop_toBottomOf="@id/vocals_review_stars"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="20dp"
             android:layout_marginTop="20dp"/>
 
-        <LinearLayout
-            android:id="@+id/reliability_review_stars"
-            android:layout_width="match_parent"
+        <RatingBar
+            android:id="@+id/reliability_rating_stars"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:theme="@style/reviewRatings"
             app:layout_constraintTop_toBottomOf="@id/reliability_rating_text"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="10dp"
-            android:orientation="horizontal"
             android:layout_marginStart="18dp"
-            android:layout_marginEnd="20dp">
-
-            <ImageView
-                android:id="@+id/reliability_s1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/ic_baseline_star_outline_24" />
-            <ImageView
-                android:id="@+id/reliability_s2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/ic_baseline_star_outline_24" />
-            <ImageView
-                android:id="@+id/reliability_s3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/ic_baseline_star_outline_24" />
-            <ImageView
-                android:id="@+id/reliability_s4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/ic_baseline_star_outline_24" />
-            <ImageView
-                android:id="@+id/reliability_s5"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/ic_baseline_star_outline_24" />
-        </LinearLayout>
+            android:stepSize=".5"
+            android:numStars="5" />
 
         <TextView
             android:id="@+id/communication_rating_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Communication Rating"
-            app:layout_constraintTop_toBottomOf="@id/reliability_review_stars"
+            android:text="@string/communication_rating"
+            app:layout_constraintTop_toBottomOf="@id/reliability_rating_stars"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="20dp"
             android:layout_marginTop="20dp"/>
 
-        <LinearLayout
-            android:id="@+id/communication_review_stars"
-            android:layout_width="match_parent"
+        <RatingBar
+            android:id="@+id/communication_rating_stars"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@id/communication_rating_text"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="10dp"
-            android:orientation="horizontal"
-            android:layout_marginStart="18dp"
-            android:layout_marginEnd="20dp">
-
-            <ImageView
-                android:id="@+id/communication_s1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/ic_baseline_star_outline_24" />
-            <ImageView
-                android:id="@+id/communication_s2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/ic_baseline_star_outline_24"/>
-            <ImageView
-                android:id="@+id/communication_s3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/ic_baseline_star_outline_24" />
-            <ImageView
-                android:id="@+id/communication_s4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/ic_baseline_star_outline_24" />
-            <ImageView
-                android:id="@+id/communication_s5"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/ic_baseline_star_outline_24" />
-        </LinearLayout>
+            app:layout_constraintStart_toStartOf="@id/communication_rating_text"
+            android:theme="@style/reviewRatings"
+            android:stepSize=".5"
+            android:numStars="5" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/save_button"
@@ -277,13 +158,13 @@
             android:layout_marginEnd="20dp"
             android:layout_marginBottom="20dp"
             android:background="@drawable/pill_button"
-            android:text="Submit"
+            android:text="@string/submit"
             android:onClick="@{() -> viewModel.onSubmitClick()}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/communication_review_stars"
+            app:layout_constraintTop_toBottomOf="@id/communication_rating_stars"
             app:layout_constraintVertical_bias="1.0" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
